--- a/meccsek.html
+++ b/meccsek.html
@@ -508,85 +508,91 @@
     backdrop-filter: blur(20px);  }
 
 @media screen and (max-width: 1100px) {
-    /* 1. FEJLÉC: Mindent balra kényszerítünk */
+    /* 1. FEJLÉC: Szétnyújtjuk, hogy ne legyen balra ragadva */
     nav {
         display: flex !important;
-        flex-direction: row !important;
-        justify-content: flex-start !important; /* BALRA RENDEZÉS */
+        justify-content: space-between !important; /* Szélekre tolja a logót és a gombokat */
         align-items: center !important;
-        padding: 0 5px !important;
-        height: 55px !important;
+        padding: 0 10px !important;
+        height: 60px !important;
         width: 100% !important;
         position: fixed !important;
         top: 0;
         left: 0;
-        z-index: 10001;
         background: #0a0a14 !important;
-        gap: 4px !important; /* Nagyon szoros gombok */
+        z-index: 10001;
         box-sizing: border-box !important;
-        overflow: hidden !important;
     }
 
-    /* Logó méretének drasztikus csökkentése, hogy maradjon hely a gomboknak */
+    /* Logó mérete és helye */
     .logo {
-        font-size: 0.75rem !important;
+        font-size: 1rem !important;
         margin: 0 !important;
-        padding-right: 2px !important;
-        white-space: nowrap !important;
         flex-shrink: 1 !important;
     }
 
-    /* Nav-tools: szintén balra rendezve */
+    /* Gombok a jobb szélen maradnak, de kisebbek, hogy kiférjenek */
     .nav-tools {
         display: flex !important;
-        justify-content: flex-start !important;
+        justify-content: flex-end !important;
         align-items: center !important;
-        gap: 3px !important;
+        gap: 4px !important;
         flex-shrink: 0 !important;
     }
 
-    /* Gombok: extra kicsi betű és padding */
     .tool-btn, #lang-btn, #theme-btn, nav a.tool-btn {
-        font-size: 0.6rem !important;
-        padding: 4px 5px !important;
-        height: 28px !important;
+        font-size: 0.7rem !important;
+        padding: 5px 8px !important;
         min-width: auto !important;
-        white-space: nowrap !important;
     }
 
-    /* Profil kép/ikon kisebb legyen */
-    #user-button img, .user-avatar {
-        width: 25px !important;
-        height: 25px !important;
-    }
-
-    /* LP Egyenleg szövege */
-    #balance-wrap {
-        font-size: 0.65rem !important;
-        margin: 0 !important;
-    }
-
-    /* 2. DÁTUMOK ÉS TARTALOM: Toljuk le a Nav alól */
+    /* 2. MECCSEK ÉS DÁTUMOK: Középre tesszük őket */
     .main-wrapper {
-        margin-top: 55px !important; /* Pontosan a nav magassága */
-        padding: 10px 0 80px 0 !important;
+        margin-top: 70px !important; /* Lehúzzuk a nav alól */
+        margin-left: 0 !important;   /* Megszüntetjük a bal oldali sáv tolását */
         width: 100% !important;
-        margin-left: 0 !important;
-        display: block !important;
+        display: flex !important;
+        flex-direction: column !important;
+        align-items: center !important; /* MECCSEK KÖZÉPRE */
+        padding-bottom: 80px !important;
     }
 
-    /* Dátumválasztó sáv */
+    /* Dátumgombok szimmetrikusan középen */
     #date-selector {
         display: flex !important;
-        overflow-x: auto !important;
-        padding: 10px 5px !important;
+        justify-content: center !important; 
+        flex-wrap: wrap !important;
         gap: 8px !important;
-        background: rgba(10, 15, 30, 0.95) !important;
         width: 100% !important;
-        justify-content: flex-start !important;
+        padding: 10px 0 !important;
     }
 
-    /* 3. ALSÓ PANEL: Fixen rögzítve a legaljára */
+    /* Meccskártyák: Szimmetrikusak és középen */
+    .match-card {
+        width: 92% !important;
+        max-width: 450px !important;
+        margin: 10px auto !important;
+        left: 0 !important;
+    }
+
+    /* 3. A LIGÁK (Sidebar) FIXÁLÁSA: Ne tolja el a tartalmat! */
+    .sidebar {
+        position: fixed !important; /* Kiszáll a dokumentumfolyamból */
+        left: -100% !important;    /* Alapból rejtett */
+        top: 60px !important;
+        width: 85% !important;
+        height: calc(100% - 120px) !important;
+        z-index: 10005 !important;
+        transition: left 0.3s ease;
+        background: #0a0a14 !important;
+    }
+
+    /* Amikor megnyitod az alsó panellel a ligákat */
+    .sidebar.open {
+        left: 0 !important;
+    }
+
+    /* 4. ALSÓ PANEL: Visszahozva a helyére */
     .mobile-nav-container {
         display: flex !important;
         position: fixed !important;
@@ -599,20 +605,6 @@
         justify-content: space-around !important;
         align-items: center !important;
         border-top: 1px solid rgba(255,255,255,0.1) !important;
-    }
-
-    /* 4. BAJNOKSÁG LISTA (SideBar) FIX */
-    /* A képen látszik, hogy elcsúsztatja a tartalmat, ezért mobilon 
-       vegyük le az asztali margókat */
-    .sidebar {
-        width: 0px !important; /* Csak ha nyitva van legyen széles */
-        position: fixed !important;
-        left: 0;
-        z-index: 10005;
-    }
-
-    .sidebar.open {
-        width: 80% !important;
     }
 }
   </style>
@@ -2152,6 +2144,7 @@ if (typeof socket !== 'undefined') {
     </script>
 </body>
 </html>
+
 
 
 
