--- a/meccsek.html
+++ b/meccsek.html
@@ -508,125 +508,99 @@
     backdrop-filter: blur(20px);  }
 
 @media screen and (max-width: 1100px) {
-    /* --- 1. NAVIGÁCIÓ: Balra rendezés és Profilkép javítás --- */
+    /* RESET & GAP JAVÍTÁS */
+    body { padding-top: 60px !important; } /* Ez tolja le a tartalmat a nav alól pontosan */
+
     nav {
-        display: flex !important;
-        justify-content: flex-start !important; /* Mindent balra tolunk */
-        align-items: center !important;
-        padding: 0 8px !important;
-        height: 65px !important;
-        width: 100vw !important;
-        position: fixed !important;
-        top: 0;
-        left: 0;
-        z-index: 10001;
-        gap: 5px !important;
-        box-sizing: border-box !important;
-    }
-
-    .logo {
-        font-size: 0.8rem !important; /* Kisebb logó, hogy beférjen a profil */
-        margin-right: 5px !important;
-        flex-shrink: 1 !important;
-    }
-
-    .nav-tools {
         display: flex !important;
         justify-content: flex-start !important;
         align-items: center !important;
-        gap: 4px !important;
-        flex-grow: 1; /* Kitölti a maradék helyet balra */
+        padding: 0 10px !important;
+        height: 60px !important;
+        width: 100% !important;
+        position: fixed !important;
+        top: 0;
+        left: 0;
+        z-index: 10000;
+        background: #0a0a14 !important;
+        gap: 5px !important;
     }
 
-    /* Profilkép/User gomb nagyítása */
-    #user-button, #auth-container {
-        width: 35px !important;
-        height: 35px !important;
+    /* PROFILKÉP ÉS NAV TOOLS */
+    .nav-tools {
         display: flex !important;
-        align-items: center;
-        justify-content: center;
+        align-items: center !important;
+        gap: 5px !important;
+        margin-left: auto; /* Jobbra tolja a gombokat a logó mellől */
+    }
+
+    #auth-container, #user-button {
+        display: block !important;
+        width: 40px !important;
+        height: 40px !important;
     }
 
     #user-button img {
-        width: 35px !important; /* Megnövelt profilkép */
-        height: 35px !important;
+        width: 40px !important; /* Szépen látható profilkép */
+        height: 40px !important;
         border-radius: 50%;
         border: 2px solid var(--neon-green);
+        object-fit: cover;
     }
 
-    .tool-btn {
-        font-size: 0.65rem !important;
-        padding: 5px 6px !important;
-        min-width: auto !important;
-        height: 32px !important;
-    }
-
-    /* --- 2. DÁTUMOK: CSÚSZKÁS (SLIDER) MEGOLDÁS --- */
+    /* DÁTUMVÁLASZTÓ - CSÚSZKÁS (Slider) */
     #date-selector {
-        margin-top: 70px !important; /* Lehúzzuk a Nav alól */
         display: flex !important;
-        flex-direction: row !important; /* EGY SOR */
-        overflow-x: auto !important; /* CSÚSZKÁS GÖRDÍTÉS */
-        overflow-y: hidden !important;
-        white-space: nowrap !important;
-        padding: 10px 15px !important;
-        gap: 12px !important;
+        overflow-x: auto !important;
+        -webkit-overflow-scrolling: touch;
+        padding: 15px 10px !important;
+        gap: 10px !important;
         width: 100% !important;
-        box-sizing: border-box !important;
-        -webkit-overflow-scrolling: touch; /* Sima görgetés mobilra */
-        scrollbar-width: none; /* Scrollbar elrejtése */
+        background: transparent !important;
+        scrollbar-width: none;
     }
-
-    #date-selector::-webkit-scrollbar {
-        display: none; /* Chrome/Safari scrollbar elrejtése */
-    }
+    #date-selector::-webkit-scrollbar { display: none; }
 
     .date-btn {
-        flex: 0 0 auto !important; /* Megakadályozza a gombok összenyomását */
-        min-width: 80px !important;
+        flex: 0 0 auto !important;
+        min-width: 90px !important;
         font-size: 0.8rem !important;
-        padding: 10px !important;
-        background: rgba(255,255,255,0.05) !important;
-        border-radius: 8px !important;
-        text-align: center;
     }
 
-    /* --- 3. TARTALOM: A Sidebar eltolásának megszüntetése --- */
-    .sidebar {
-        position: fixed !important;
-        left: -100% !important; /* Teljesen kivesszük, nem tol el semmit */
-        width: 80% !important;
-        z-index: 10005;
-    }
-
+    /* TABELLA ÉS LIGÁK ILLESZKEDÉSE (Nincs több Gap) */
     .main-wrapper {
-        margin-left: 0 !important; /* Megszünteti a bal oldali üres sávot */
         margin-top: 0 !important;
         padding: 0 0 100px 0 !important;
+    }
+
+    .standings-container, .leagues-container {
+        margin-top: 0 !important; /* Eltünteti a rést a nav alatt */
         width: 100% !important;
-        display: flex !important;
-        flex-direction: column !important;
-        align-items: center !important; /* Meccsek középen */
+        padding: 10px !important;
+        box-sizing: border-box;
     }
 
-    .match-card {
-        width: 95% !important;
-        margin: 15px auto !important;
-    }
-
-    /* --- 4. ALSÓ PANEL FIXÁLÁSA --- */
-    .mobile-nav-container {
+    /* ALSÓ NAVIGÁCIÓ JAVÍTÁSA */
+    .mobile-nav {
         display: flex !important;
         position: fixed !important;
         bottom: 0 !important;
         left: 0 !important;
         width: 100% !important;
-        height: 65px !important;
-        background: #0a0a14 !important;
-        z-index: 10002 !important;
+        height: 70px !important;
+        background: #0d0d17 !important;
+        z-index: 10001 !important;
         justify-content: space-around !important;
         align-items: center !important;
-        border-top: 1px solid rgba(255,255,255,0.1) !important;
+        border-top: 2px solid var(--neon-blue) !important;
+        padding-bottom: env(safe-area-inset-bottom);
+    }
+
+    .mobile-nav .tool-btn {
+        flex: 1;
+        margin: 5px;
+        font-size: 0.75rem !important;
+        height: 45px !important;
     }
 }
   </style>
@@ -2166,6 +2140,7 @@ if (typeof socket !== 'undefined') {
     </script>
 </body>
 </html>
+
 
 
 
